--- a/Phase-3 MERN STACK/MERN Projects/Project 2/Amazon.html
+++ b/Phase-3 MERN STACK/MERN Projects/Project 2/Amazon.html
@@ -157,9 +157,7 @@
 </body>  
     
     <footer>
-    <p>Conditions of Use & Sale
-        Privacy Notice
-        Interest-Based Ads
-        © 1996-2024, Amazon.com, Inc. or its affiliates</p>
+    <p>Conditions of Use & Sale Privacy Notice Interest-Based Ads</p>
+    <p>  © 1996-2024, Amazon.com, Inc. or its affiliates</p>
     </footer>
 </html>
