--- a/Phase-3 MERN STACK/Project 1/Resume.html
+++ b/Phase-3 MERN STACK/Project 1/Resume.html
@@ -78,15 +78,15 @@
                 </p>
             </div>
             
-            <div style="margin:30px; font-weight: bold;">
+            <div class="right">
                 <h2 style="margin-left: 1px;margin-bottom: 10px;">Work Experience</h2>
                 <hr>
                 <div style="display: flex;">
                     <div class="ws">
-                        <div style="padding-top:80px;padding-bottom: 40px;">
+                        <div style="padding-top:40px;padding-bottom: 40px;">
                             <p>2014-2016</p>
                         </div>
-                        <div style="padding-top:110px;padding-bottom: 80px;">
+                        <div style="padding-top:100px;padding-bottom: 40px;">
                             <p>2012-2014</p>
                         </div> 
                     </div>
@@ -104,14 +104,15 @@
                     </div>
                 </div>
             </div>
-            <div style="margin:30px; font-weight: bold;">
-                <h2 style="margin-left: 1px;margin-bottom: 10px;">SOFTWARE SKILL</h2>
+            <div class="right">
+                <h2 style="margin-left: 1px;margin-bottom: 5px;">SOFTWARE SKILL</h2>
                 <hr>
                 <div style="display: flex;">
                     <div class="ws">
                         <div class="rpart">
                             <p>Adobe Photoshop</p>
-                            <div class="sunderlineouter"><div class="sunderline"></div>
+                            <div class="sunderlineouter"><div class="sunderline">
+                            </div>
                             </div>
                             
                         </div>
@@ -126,25 +127,26 @@
                             </div>
                         </div>
                     </div>
-                    <div>
                         <div class="ws">
                             <div class="rpart">
                                 <p>Microsoft Word</p>
-                                <div class="sunderlineouter"><div class="sunderline"></div>
+                                <div class="sunderlineouter">
+                                <div class="sunderline"></div>
                                 </div>
                             </div>
                             <div class="rpart">
                                 <p>Microsoft Word</p>
-                                <div class="sunderlineouter"><div class="sunderline"></div>
+                                <div class="sunderlineouter">
+                                <div class="sunderline"></div>
                                 </div>
                             </div>  
                             <div class="rpart">
                                 <p>Microsoft Word</p>
-                                <div class="sunderlineouter"><div class="sunderline"></div>
+                                <div class="sunderlineouter">
+                                <div class="sunderline"></div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
